<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="ime_name">飞雪输入法</string>
    <string name="ime_settings_activity_name">飞雪输入法设置</string>
    <!-- version = apk(java) + ime engine + sys dict + [hotlist (TBD)] -->
    <string name="version">1.0.0</string>

    <!-- Used by the toggle keys in soft keyboards.-->
    <string name="toggle_cn">0</string>
    <string name="toggle_cn_cand">1</string>
    <string name="toggle_en_lower">2</string>
    <string name="toggle_en_upper">3</string>
    <string name="toggle_en_sym1">4</string>
    <string name="toggle_en_sym2">5</string>
    <string name="toggle_smiley">6</string>
    <string name="toggle_enter_go">7</string>
    <string name="toggle_enter_search">8</string>
    <string name="toggle_enter_send">9</string>
    <string name="toggle_enter_next">10</string>
    <string name="toggle_enter_done">11</string>
    <string name="toggle_row_cn">12</string>
    <string name="toggle_row_en">13</string>
    <string name="toggle_row_uri">14</string>
    <string name="toggle_row_emailaddress">15</string>
    <string name="toggle_phone_sym">3</string>

    <string name="toggle_row_py_b">20</string>
    <string name="toggle_row_py_p">21</string>
    <string name="toggle_row_py_m">22</string>
    <string name="toggle_row_py_f">23</string>
    <string name="toggle_row_py_d">24</string>
    <string name="toggle_row_py_t">25</string>
    <string name="toggle_row_py_n">26</string>
    <string name="toggle_row_py_l">27</string>
    <string name="toggle_row_py_gkh">28</string>
    <string name="toggle_row_py_jqx">29</string>
    <string name="toggle_row_py_z">30</string>
    <string name="toggle_row_py_cs">31</string>
    <string name="toggle_row_py_zhchsh">32</string>
    <string name="toggle_row_py_r">33</string>
    <string name="toggle_row_py_y">34</string>
    <string name="toggle_row_py_w">35</string>
    <string name="toggle_row_py_no_cons">36</string>

    <!-- settings related -->
    <string name="setting_sound_key">setting_sound_key</string>
    <string name="setting_vibrate_key">setting_vibrate_key</string>
    <string name="setting_prediction_key">setting_prediction_key</string>
    <string name="setting_switch_key">setting_switch_key</string>
    <string name="setting_advanced_key">setting_advanced_key</string>
    <string name="setting_input_test_key">setting_input_test_key</string>

	<string name="setting">飞雪输入法设置</string>
    <string name="setting_sound_key_title">按键声音</string>
    <string name="setting_vibrate_title">按键震动</string>
    <string name="setting_prediction_title">联想输入</string>
    <string name="setting_switch_title">中英文切换</string>
    <string name="setting_switch_shift_space_title">Shift-space</string>
    <string name="setting_input_test_title">输入测试</string>

    <string name="setting_enabled">开启</string>
    <string name="setting_disabled">关闭</string>

    <string name="setting_others">其它设置</string>
    <string name="setting_others_summary">词典同步等</string>

</resources>
