<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<keyboard
    skb_template="@xml/skb_template1"
    skb_cache_flag="true"
    skb_sticky_flag="true"
    width="10%p"
    height="25%p"
    key_type="0"
    repeat="false"
    balloon="true">

  <row>
    <keys splitter="|" labels="q|w|r|t|y|zh|ch|sh|p"
      codes="45|51|46|48|53|301|302|303|44"/>
  </row>

  <row>
    <key label="韵" key_type="1" code="309"/>
    <keys splitter="|" labels="s|d|f|g|h|j|k|l"
      codes="47|32|34|35|36|38|39|40"/>
  </row>

  <row>
    <key label="，" width="14.286%p" icon="@drawable/comma_full_icon"
      icon_popup="@drawable/comma_full_popup_icon">
      <toggle_state state_id="@string/toggle_smiley" code="-6"
        icon="@drawable/smiley_icon" icon_popup="@drawable/smiley_popup_icon"
        key_type="2"/>
    </key>
    <keys splitter="|" labels="z|x|c|b|n|m"
      codes="54|52|31|30|42|41"/>
    <key id="3"/>
  </row>

  <row width="20%p">
    <key id="6"/>
    <key id="4"/>
    <key code="62" key_type="5" width="30.608%p"/>
    <key label="。" width="14.696%p" icon="@drawable/period_full_icon"
      icon_popup="@drawable/period_full_popup_icon"/>
    <key id="1"/>
  </row>

  <row width="20%p" row_id="@string/toggle_row_uri" start_pos_y="75%p">
    <key id="6"/>
    <key id="4"/>
    <key label="/" width="15.304%p"/>
    <key code="62" key_type="5" width="15.304%p"/>
    <key id="7"/>
    <key id="1"/>
  </row>

  <row width="20%p" row_id="@string/toggle_row_emailaddress" start_pos_y="75%p">
    <key id="6"/>
    <key id="4"/>
    <key label="\@" width="15.304%p"/>
    <key code="62" key_type="5" width="15.304%p"/>
    <key id="7"/>
    <key id="1"/>
  </row>
</keyboard>

